--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #67594c;
+  overflow: hidden;
 }
 
 code {
@@ -38,6 +39,24 @@ code {
 
 .loader h1{
   margin-top: -100px;
+}
+
+.header {
+  padding: 10px;
+  background-color: firebrick;
+  color: #fff;
+  position: fixed;
+  top:0;
+  right: 0;
+  left: 0;
+  z-index: 100;
+}
+
+.header h1 {
+  font-size: 25px;
+  padding: 0;
+  margin: 0;
+  text-align: center;
 }
 
 .location-info {
